cgraph is not a configure option these days

--- a/configure.ac
+++ b/configure.ac
@@ -3306,7 +3306,7 @@ echo ""
 echo "graphviz-$VERSION will be compiled with the following:"
 echo ""
 echo "options:"
-echo "  cgraph:        $use_cgraph"
+echo "  cgraph:        Yes (always enabled)"
 echo "  digcola:       $use_digcola"
 echo "  expat:         $use_expat"
 echo "  fontconfig:    $use_fontconfig"
