Simple unit test added.
This unit test serves to validate the configuration and installation of the Criterion unit testing framework. This test will only be compiled and run if Criterion is installed.

--- a/configure.ac
+++ b/configure.ac
@@ -3287,6 +3287,9 @@ AC_CONFIG_FILES(Makefile
 	tclpkg/gv/demo/Makefile
 	tclpkg/gv/META.gv
 	rtest/Makefile
+  tests/Makefile
+  tests/lib/Makefile
+  tests/lib/common/Makefile
 	share/Makefile
 	share/examples/Makefile
 	share/gui/Makefile
