Travis: Install Criterion
Adds the installation of Criterion to the `install` step in the Travis configuration. A submodule is used so changes in the Criterion repository can't break the build. A submodule points to a specific commit.

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "windows/dependencies/graphviz-build-utilities"]
 	path = windows/dependencies/graphviz-build-utilities
 	url = https://github.com/ErwinJanssen/graphviz-build-utilities.git
+[submodule "dependencies/criterion"]
+	path = dependencies/criterion
+	url = https://github.com/Snaipe/Criterion.git
