Tests added for current behaviour command line.
This commit adds some tests that "document" the current behavior of the command line interface. When refactoring command line interface (like the parsing code), the observable behavior of the command line interface should stay the same, this is to ensure backwards compatibility. These tests are a start, it covers some basic command line operations (printing the version and usage), but show some interesting things. Mainly that the order of the flags is very important.

- `dot -Vrandom` prints the version, but `dot -randomV` causes an error.
- `dot -?V` prints the usage, but `dot -V?` prints the version.

While it may be desirable to change this, when refactoring this behavior should stay the same. Changing the existing interface should be done in Graphviz 3.

--- a/tests/lib/common/Makefile.am
+++ b/tests/lib/common/Makefile.am
@@ -3,6 +3,15 @@
 
 if HAVE_CRITERION
 
+AM_CPPFLAGS = \
+	-I$(top_srcdir) \
+    -I$(top_srcdir)/lib/common \
+    -I$(top_srcdir)/lib/gvc \
+	-I$(top_srcdir)/lib/pathplan \
+	-I$(top_srcdir)/lib/cgraph \
+	-I$(top_srcdir)/lib/cdt \
+    -DDEMAND_LOADING=1
+
 AM_LDFLAGS = \
 	-lcriterion
 
@@ -11,5 +20,8 @@ TESTS = command_line
 bin_PROGRAMS = $(TESTS)
 
 command_line_SOURCES = command_line.c
+command_line_CPPFLAGS = $(AM_CPPFLAGS) -DDEMAND_LOADING=1
+command_line_LDADD = \
+	$(top_builddir)/lib/gvc/libgvc.la
 
 endif
