Travis: clean build steps.
Because the results of `make install` when using a prefix aren't binaries suitable to be released, some build steps can either be removed or simpified.

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,19 +25,14 @@ install:
 
 script:
 - cd ${TRAVIS_BUILD_DIR}
-- GRAPHVIZ_DESTINATION_FOLDER="graphviz-build"
-- "./autogen.sh NOCONFIG"
-- "./configure --prefix=${TRAVIS_BUILD_DIR}/${GRAPHVIZ_DESTINATION_FOLDER}"
-- make dist
+# Build and test code
+- ./autogen.sh
 - make
-- make install
-- ls
-- ls ${GRAPHVIZ_DESTINATION_FOLDER}
-- PATH=${TRAVIS_BUILD_DIR}/${GRAPHVIZ_DESTINATION_FOLDER}/bin:$PATH
-- echo $PATH
-- dot -V
-- dot -c
+- sudo make install
 - make check
+# Create source package to deploy
+- make dist
+
 before_deploy:
 - GRAPHVIZ_PACKAGE_NAME="graphviz-${TRAVIS_TAG}-linux.tar.gz"
 - tar czf ${GRAPHVIZ_PACKAGE_NAME} ${GRAPHVIZ_DESTINATION_FOLDER}
