build manpages unconditionally on Travis hsost

--- a/cmd/lefty/Makefile.am
+++ b/cmd/lefty/Makefile.am
@@ -41,25 +41,20 @@ AM_CPPFLAGS = \
 AM_CFLAGS = -DLEFTYDATADIR=\"$(leftydir)\" -DHAVE_CONFIG_H @X_CFLAGS@
 endif
 
-
-man = lefty.1
-pdf = lefty.1.pdf
-
 noinst_HEADERS = code.h common.h display.h exec.h g.h gfxview.h internal.h \
 	leftyio.h lex.h mem.h parse.h str.h tbl.h txtview.h
 
 if WITH_X
 if WITH_XAW
 bin_PROGRAMS = lefty
-man_MANS = $(man)
-pdf_DATA = $(pdf)
 endif
 endif
 if WITH_WIN32
 bin_PROGRAMS = lefty
-man_MANS = $(man)
-pdf_DATA = $(pdf)
 endif
+
+man_MANS = lefty.1
+pdf_DATA = lefty.1.pdf
 
 lefty_DATA = lefty.psp
 
@@ -96,7 +91,6 @@ endif
 lefty.1.pdf: $(srcdir)/lefty.1
 	- @GROFF@ -Tps -man $(srcdir)/lefty.1 | @PS2PDF@ - - >lefty.1.pdf
 
-EXTRA_DIST = $(lefty_DATA) $(man) $(pdf) \
-	lefty.vcxproj* colors.txt aix_mods cs2l/*
+EXTRA_DIST = $(lefty_DATA) $(man_MANS) $(pdf_DATA) lefty.vcxproj* colors.txt aix_mods cs2l/*
 
-DISTCLEANFILES = $(pdf)
+DISTCLEANFILES = $(pdf_DATA)
