--- a/cmd/lneato/Makefile.am
+++ b/cmd/lneato/Makefile.am
@@ -3,18 +3,16 @@
 
 pdfdir = $(pkgdatadir)/doc/pdf
 
-man = lneato.1
-pdf = lneato.1.pdf
-
 if WITH_X
-man_MANS = $(man)
-pdf_DATA = $(pdf)
 if WITH_WIN32
 bin_PROGRAMS = lneato
 else
 bin_SCRIPTS = lneato
 endif
 endif
+
+man_MANS = lneato.1
+pdf_DATA = lneato.1.pdf
 
 AM_CFLAGS = -DLNEATO
 if WITH_WIN32
@@ -29,7 +27,7 @@ endif
 lneato.1.pdf: $(srcdir)/lneato.1
 	- @GROFF@ -Tps -man $(srcdir)/lneato.1 | @PS2PDF@ - - >lneato.1.pdf
 
-EXTRA_DIST = $(man) $(pdf) lneato.bsh lneato.ksh lneato.sh \
+EXTRA_DIST = $(man_MANS) $(pdf_DATA) lneato.bsh lneato.ksh lneato.sh \
 	mswin32 lneato.vcxproj*
 
-DISTCLEANFILES = lneato $(pdf)
+DISTCLEANFILES = lneato $(pdf_DATA)
