--- a/cmd/dotty/Makefile.am
+++ b/cmd/dotty/Makefile.am
@@ -1,15 +1,10 @@
 # $Id$ $Revision$
 ## Process this file with automake to produce Makefile.in
 
-man = dotty.1
-pdf = dotty.1.pdf
-
 leftydir = $(pkgdatadir)/lefty
 pdfdir = $(pkgdatadir)/doc/pdf
 
 if WITH_X
-man_MANS = $(man)
-pdf_DATA = $(pdf)
 if WITH_WIN32
 bin_PROGRAMS = dotty
 else
@@ -18,6 +13,9 @@ endif
 lefty_DATA = dotty.lefty dotty_draw.lefty dotty_edit.lefty \
         dotty_layout.lefty dotty_ui.lefty
 endif
+
+man_MANS = dotty.1
+pdf_DATA = dotty.1.pdf
 
 if WITH_WIN32
 dotty_SOURCES = mswin32/dotty.c
@@ -31,8 +29,8 @@ endif
 dotty.1.pdf: $(srcdir)/dotty.1
 	- @GROFF@ -Tps -man $(srcdir)/dotty.1 | @PS2PDF@ - - >dotty.1.pdf
 
-EXTRA_DIST = $(lefty_DATA) $(man) $(pdf) \
+EXTRA_DIST = $(lefty_DATA) $(man_MANS) $(pdf_DATA) \
 	dotty.bsh dotty.ksh dotty.sh \
 	notes mswin32 dotty.vcxproj*
 
-DISTCLEANFILES = $(pdf) dotty
+DISTCLEANFILES = $(pdf_DATA) dotty
