--- a/configure.ac
+++ b/configure.ac
@@ -330,14 +330,16 @@ then
   CFLAGS="${CFLAGS} -Wmissing-include-dirs -Wswitch-default -Wfloat-equal -Wundef -Wshadow -Wpointer-arith -Wbad-function-cast -Wcast-qual -Wconversion -Wstrict-prototypes -Wmissing-prototypes -Wnested-externs"
 
  # if C99, then enable additional warnings
- if [test "${ac_cv_prog_cc_c99}" != "no"]
- then
+# if [test "${ac_cv_prog_cc_c99}" != "no"]
+# then
     # When enabling c99 on this codebase, this POSIX version should be defined
-    CFLAGS="${CFLAGS} -D_POSIX_C_SOURCE=200112L"
+
+    # FIXME - enabling this flag breaks configure test for php.h
+    # CFLAGS="${CFLAGS} -D_POSIX_C_SOURCE=200112L"
 
     # FIXME - not available on centos[56]: gcc-4.1.2, gcc-4.4.7
-    # -Wdouble-promotion -Wtrampolines -Wlogical-op
-  fi
+    # CFLAGS="${CFLAGS} -Wdouble-promotion -Wtrampolines -Wlogical-op"
+#  fi
 fi
 # Workaround for native compilers
 #  HP  : http://bugs.gnome.org/db/31/3163.html
