Fix Travis deployment
Because of the use of `sudo` the created file is owned by root and the default travis user has no permission to deploy it. Using `chown` fixes this.
Also added a condition on the deploy, so only one file gets deployed.

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,8 @@ script:
 before_deploy:
 - export DEPLOYED_FILE=$(ls *.tar.gz)
 - echo "deploying ${DEPLOYED_FILE} to GitHub releases"
+- sudo chown travis ${DEPLOYED_FILE}
+
 deploy:
   provider: releases
   api_key:
@@ -48,3 +50,4 @@ deploy:
   file: "${DEPLOYED_FILE}"
   on:
     repo: ellson/graphviz
+    condition: ${DOCKER_BUILD} == "FALSE"
